[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymsch"
version = "0.0.11"
authors = [
    {name="skyethefoxyfox"},
]
description = "A package for creating mindustry schematic files"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip",
]

[dependency-groups]
test = [
    "pytest~=8.4.1",
]

[project.urls]
Source = "https://github.com/SkyeTheFoxyFox/pymsch"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["--import-mode=importlib"]
